--- a/wrangler.toml
+++ b/wrangler.toml
@@ -12,7 +12,9 @@ JWT_SECRET = ""
 
 [d1_databases]
 # Bind your D1 database. This makes `env.DB` available in your Workers.
-DB = { binding = "DB", database_name = "aduserdb", database_id = "47348cd6-9639-4e6a-9fa3-dcddf6fd7af8" } # REPLACE THIS WITH YOUR ACTUAL D1 DATABASE ID
+binding = "DB"
+database_name = "aduserdb"
+database_id = "47348cd6-9639-4e6a-9fa3-dcddf6fd7af8"
 
 # Cloudflare Pages specific configuration
 [[pages_build_output]]
