--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,22 +1,22 @@
 name = "futurecom-ads-dashboard"
-# We don't need a `main` entry point as Pages Functions handle routing
-compatibility_date = "2024-06-15" # Use a recent date for latest Workers runtime features
+# This is the crucial top-level property for Cloudflare Pages to identify
+# where your static assets are located after your build command runs.
+pages_build_output_dir = "public"
 
+# Ensure this compatibility date is current or slightly in the future
+# to use the latest Workers runtime features.
+compatibility_date = "2024-06-15"
+
+# Environment variables for your Pages Functions
+# DATA_URL will be used by your /api/ads function
 [vars]
-# Your external data source URL, accessed securely by the Worker
 DATA_URL = "https://opensheet.elk.sh/1n66ctdtHrySM957k4TFRYfO6JRmJ9Y5oBGaIMS3g8PY/result"
-# Secret key for JWT signing/verification.
-# **IMPORTANT**: For production, set this as a secret: `wrangler secret put JWT_SECRET`
-# Do NOT commit sensitive keys directly to your Git repository.
-JWT_SECRET = ""
+# JWT_SECRET is used for signing and verifying JWTs.
+# **IMPORTANT**: For production, set this as a secure secret via `wrangler secret put JWT_SECRET`
+# and remove it from this file to prevent it from being committed to your Git repository.
+JWT_SECRET = "your_super_secret_jwt_key_CHANGE_THIS_IN_PRODUCTION_AND_USE_WRANGLER_SECRET"
 
+# D1 database binding for your Pages Functions
+# This allows your functions to interact with your D1 database using `env.DB`
 [d1_databases]
-# Bind your D1 database. This makes `env.DB` available in your Workers.
-binding = "DB"
-database_name = "aduserdb"
-database_id = "47348cd6-9639-4e6a-9fa3-dcddf6fd7af8"
-
-# Cloudflare Pages specific configuration
-[[pages_build_output]]
-# This tells Cloudflare Pages where your static assets are located
-bucket = "public"
+DB = { binding = "DB", database_name = "aduserdb", database_id = "47348cd6-9639-4e6a-9fa3-dcddf6fd7af8" } # REPLACE THIS WITH YOUR ACTUAL D1 DATABASE ID
