--- a/package.json
+++ b/package.json
@@ -1,20 +1,15 @@
 {
-    "name": "futurecom-ads-dashboard",
-    "version": "1.0.0",
-    "description": "Ads Dashboard deployed on Cloudflare Pages with D1 and JWT authentication.",
+    "name": "fc-ads-dashboard",
+    "version": "0.1.0",
     "private": true,
-    "type": "module",
-    "scripts": {
-      "start": "wrangler pages dev public --binding DB=your_ads_db --local-env --port 8787",
-      "deploy": "wrangler pages deploy public --project-name futurecom-ads-dashboard"
-    },
-    "devDependencies": {
-      "wrangler": "^3.57.0"
-    },
     "dependencies": {
-      "bcryptjs": "^2.4.3",
-      "hono": "^4.3.5",
-      "jose": "^5.2.4"
-    }
+      // ... your existing dependencies
+    },
+    "scripts": {
+      "start": "react-scripts start",
+      "build": "react-scripts build", // Add this line
+      "test": "react-scripts test",
+      "eject": "react-scripts eject"
+    },
+    // ... rest of your package.json
   }
-  
