--- a/wrangler.toml
+++ b/wrangler.toml
@@ -14,6 +14,7 @@ DATA_URL = "https://opensheet.elk.sh/1n66ctdtHrySM957k4TFRYfO6JRmJ9Y5oBGaIMS3g8P
 # JWT_SECRET is used for signing and verifying JWTs.
 # **IMPORTANT**: For production, set this as a secure secret via `wrangler secret put JWT_SECRET`
 # and remove it from this file to prevent it from being committed to your Git repository.
+JWT_SECRET = ""
 
 # D1 database binding for your Pages Functions
 # This allows your functions to interact with your D1 database using `env.DB`
